--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-transition-group": "^4.4.5",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7"
   },
